--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -219,7 +219,15 @@ body {
     margin: 0 auto;
     position: relative;
     top: 0;
-    margin-top: 115px;
+    margin-top: 100px;
+}
+
+@media (max-width:1150px) {
+
+    body {
+        margin-top: 126px;
+    }
+
 }
 
 @media (max-width:1024px) {
