--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import "css/style-index.css";
                     title="Refrigerator Repair Los Angeles"
                     href="/services/commercial-refrigerator-repair-los-angeles">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="../images/refrigerator-repair.webp"
                         alt="Same day expert refrigerator repair - Los Angeles"
                       />
@@ -67,7 +67,7 @@ import "css/style-index.css";
                     title="Refrigerator Repair Los Angeles"
                     href="/services/freezer-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="../images/freezer-stove-repair.webp"
                         alt="Same day expert freezer repair - Los Angeles"
                       />
@@ -93,7 +93,7 @@ import "css/style-index.css";
                     title="Refrigerator Repair Los Angeles"
                     href="/services/dishwasher-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/washer-repair.webp"
                         alt="Same day expert washer repair - Los Angeles"
                       />
@@ -119,7 +119,7 @@ import "css/style-index.css";
                     title="Refrigerator Repair Los Angeles"
                     href="/services/dryer-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/dryer-repair.webp"
                         alt="Same day expert dryer repair - Los Angeles"
                       />
@@ -145,7 +145,7 @@ import "css/style-index.css";
                     title="Stove Repair Los Angeles"
                     href="/services/stove-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/range-stove-repair.webp"
                         alt="Same day expert range/stover repair - Los Angeles"
                       />
@@ -171,7 +171,7 @@ import "css/style-index.css";
                     title="Dishwasher Repair Los Angeles"
                     href="/services/dishwasher-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/dishwasher-repair.webp"
                         alt="Same day dishwasher repair - Los Angeles"
                       />
@@ -197,7 +197,7 @@ import "css/style-index.css";
                     title="Oven Repair Los Angeles"
                     href="/services/oven-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="../images/oven-repair.webp"
                         alt="Same day expert refrigerator repair - Los Angeles"
                       />
@@ -220,7 +220,7 @@ import "css/style-index.css";
                     title="Cooktop Repair Los Angeles"
                     href="/services/cooktop-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="../images/cooktop-repair.webp"
                         alt="Same day expert freezer repair - Los Angeles"
                       />
@@ -246,7 +246,7 @@ import "css/style-index.css";
                     title="Microwave Repair Los Angeles"
                     href="/services/microwave-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/microwave-repair.webp"
                         alt="Same day microwave repair - Los Angeles"
                       />
@@ -272,7 +272,7 @@ import "css/style-index.css";
                     title="Range Hood Repair Los Angeles"
                     href="/services/range-hood-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/range-hood-repair.webp"
                         alt="Same day range hood repair - Los Angeles"
                       />
@@ -298,7 +298,7 @@ import "css/style-index.css";
                     title="Fireplace Repair Los Angeles"
                     href="/services/fireplace-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/fireplace-repair.webp"
                         alt="Same day fireplace repair - Los Angeles"
                       />
@@ -324,7 +324,7 @@ import "css/style-index.css";
                     title="Fireplace Repair Los Angeles"
                     href="/services/fireplace-repair">
                     <div class="f-content-machinery">
-                      <img
+                      <img loading="lazy"
                         src="images/bbq-grill-repair.webp"
                         alt="Same day bbq grill repair - Los Angeles"
                       />
