--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -903,11 +903,13 @@ import "css/style-index.css";
         <Hero />
         <Features />
 
-        <br /><h2>
+        <div class="finish-index">
+
+        <h2>
           Same Day Appliance Repair Services for Commercial & Household Use in
           Los Angeles and Surrounding Areas
         </h2>
-        <br /><p>
+        <p>
           Welcome to the Same Day Appliance Repair - your destination for all
           your commercial and household appliance repair needs! We pride
           ourselves on being a trusted business, serving our valued customers
@@ -918,14 +920,14 @@ import "css/style-index.css";
           ethic form the cornerstone of our operational approach, aiming to
           resolve your appliance issues promptly and proficiently.
         </p>
-        <br /><p>
+        <p>
           To guarantee a high quality service, we have invested significantly in
           the continual education and training of our skilled technicians.
           Additionally, we maintain a comprehensive inventory of appliance
           parts, enabling us to tackle a majority of repair challenges in a
           single visit.
         </p>
-        <br /><p>
+        <p>
           Our range of expertise encompasses appliance diagnostics, appliance
           maintenance, appliance repair, and appliance installation services,
           covering a diverse array of residential and commercial appliances
@@ -934,7 +936,7 @@ import "css/style-index.css";
           coolers, microwaves, dishwashers, garbage disposals, or BBQs, we have
           you covered.
         </p>
-        <br /><p>
+        <p>
           We work with all brands, including but not limited to Samsung,
           Whirlpool, KitchenAid, Bosch, Frigidaire, Maytag, Sub-Zero, Subzero,
           Kenmore, General Electric, GE, LG, Liebherr, JennAir, Dacor,
@@ -946,7 +948,6 @@ import "css/style-index.css";
           quality repair service.
         </p>
 
-        <div class="category category-0" style="background-color:#ffffff;">
           <h2>Ensuring Compatibility and Performance</h2>
           <p>
             Providing professional appliance repair service, we are commitment
@@ -961,19 +962,23 @@ import "css/style-index.css";
             with the manufacturer's design, we ensure that your refrigerator
             continues to operate as efficiently as on the day you bought it.
           </p>
+
+
+
+
           <h2>
             How to Schedule Same-Day Appointment For Appliance Repair in Los
             Angeles and Surrounding Areas and What to Expect
           </h2>
           <h3>How to Contact Us</h3>
-          <br /><p>
+          <p>
             Contacting us directly via the phone is the most efficient method to
             arrange your same-day service appointment. You can also book your
             appointment online and specify the details of the appointment such
             as the brand of your appliance, a specific issue, date, and time.
           </p>
-          <br /><h3>Service Fee Cost and When Is It Waved</h3>
-          <br /><p>
+          <h3>Service Fee Cost and When Is It Waved</h3>
+          <p>
             We charge a service fee of $65 for household appliances. Upon
             arrival, our technician will assess the issue and inform you of the
             total repair cost. This puts you in control, allowing you to decide
@@ -981,8 +986,8 @@ import "css/style-index.css";
             the repair, we will waive the initial service fee, and you'll only
             be responsible for the repair costs
           </p>
-          <br /><h3>Our Hours Of Operation</h3>
-          <br /><p>
+          <h3>Our Hours Of Operation</h3>
+          <p>
             We answer the phone Monday through Saturday, 8 am to 8 pm, However,
             our technicians can be on-site at an earlier or a later hour
             including Sunday. Our team approaches each job with a positive,
@@ -1006,6 +1011,7 @@ import "css/style-index.css";
             different, ranging from a basic issue like a malfunctioning outlet
             to more complex problems like a faulty compressor.
           </p>
+        
         </div>
 
         <Cta />
