--- a/src/css/style-index.css
+++ b/src/css/style-index.css
@@ -158,6 +158,7 @@ h2 {
     font-weight: 600;
     text-shadow: 0.6px 0.6px 1.2px rgb(102, 102, 102);
     margin: 0;
+    color: #000;
 }
 
 .but-content-machinery {
