--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -146,6 +146,10 @@ const makeTitle = title
         background-color: #c2250a !important;
       }
 
+      h1, h2, h3, h4, h5, h6, p, a {
+        color: #000;
+      }
+
       /*---*/
       .review-card {
         margin: 10px;
