--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -181,7 +181,7 @@ const menuitems = [
             </div>
           </div>
         </div>
-        <div class="reviews">
+        <div class="reviews reviews-header" >
           <p>
             <a href="#reviews"
               ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong>
