--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -10,7 +10,7 @@ import "components/css-components/style-header.css";
 const menuitems = [
 
   {
-    title: "HOUSEHOLD",
+    title: "Household Appliance Services",
     path: "/services/commercial-and-household",
     children: [
       { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
@@ -30,7 +30,7 @@ const menuitems = [
 
 
       {
-    title: "COMMERCIAL",
+    title: "Commercial Appliance Services",
     path: "/services/commercial-and-household",
     children: [
       {
@@ -53,7 +53,7 @@ const menuitems = [
   },
 
   {
-    title: "HVAC",
+    title: "HVAC Services",
     path: "/services/commercial-and-household",
     children: [
       {
@@ -108,10 +108,7 @@ const menuitems = [
       },
     ],
   },
-  {
-    title: "Contact",
-    path: "/contact",
-  },
+  
 ];
 ---
 
