--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -163,9 +163,10 @@ const menuitems = [
                   ))
                 }
               </ul>
+              <!--Red Buttons In the black header on Mobile-->
               <div class="lg:hidden flex items-center mt-3 gap-4">
                 <Link href="tel:+14243250520" style="muted" block size="md"
-                  >CALL US: (424) 325-0520</Link
+                  >CALL US1: (424) 325-0520</Link
                 >
 
                 <!--Start of Housecallpro Online booking button-->
@@ -174,7 +175,7 @@ const menuitems = [
                   data-orgname="Same-Day-Appliance-Repair"
                   class="hcp-button"
                   onClick="HCPWidget.openModal()">
-                  Book
+                  Book1
                 </button>
                 <script
                   async
@@ -182,38 +183,43 @@ const menuitems = [
                 ></script>
                 <!--End of Housecallpro Online booking button-->
               </div>
+              <!--End Red Buttons In the black header on Mobile-->
             </MenuItems>
           </Astronav>
-          <div>
-            <div class="hidden lg:flex items-center gap-4">
-              <div class="call-header">
-                <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
-              </div>
-              <!--Start of Housecallpro Online booking button-->
-              <button
-                data-token="9e68ce292ba246dbba0fe928b98791f7"
-                data-orgname="Same-Day-Appliance-Repair"
-                class="hcp-button"
-                onClick="HCPWidget.openModal()">
-                Book
-              </button>
-              <script
-                async
-                src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
-              ></script>
-              <!--End of Housecallpro Online booking button-->
+         
+        </div>
+        <!--Red Buttons in the black header on Desktop -->
+        <div>
+          <div class="hidden lg:flex items-center gap-4">
+            <div class="call-header">
+              <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
             </div>
+            
+            <!--Start of Housecallpro Online booking button-->
+            <button
+              data-token="9e68ce292ba246dbba0fe928b98791f7"
+              data-orgname="Same-Day-Appliance-Repair"
+              class="hcp-button"
+              onClick="HCPWidget.openModal()">
+              Book
+            </button>
+            <script
+              async
+              src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
+            ></script>
+            <!--End of Housecallpro Online booking button-->
           </div>
         </div>
+         <!--End Red Buttons in the black header on Desktop -->
         <div class="reviews reviews-header" >
           <p>
             <a href="#reviews"
-              ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong>
+              ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
               (Google Rating)<a
-                ><a href="#reviews">(Thumbtack Rating)<a></a></a>
+                ><a href="#reviews">(Thumbtack Rating)</a>
               </a>
-            </a>
           </p>
+           
         </div>
       </div>
     </header>
