--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -27,8 +27,6 @@ const menuitems = [
       { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair" },
       ],
   },
-
-
       {
     title: "Commercial Appliance Services",
     path: "/services/commercial-and-household",
@@ -188,6 +186,8 @@ const menuitems = [
           </Astronav>
          
         </div>
+
+        <img src="images/samedayappliance-repair-services.webp" width="150" height="150">
         <!--Red Buttons in the black header on Desktop -->
         <div>
           <div class="hidden lg:flex items-center gap-4">
