--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -123,7 +123,7 @@ const menuitems = [
                 ><span
                   class="font-bold text-slate-800"
                   style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                  >SAME DAY APPLIANCE REAPAIR</span
+                  ><img src="images/same-day-appalince-repair-logo.webp" title="Same Day Appliance Repair Services" width="250" height="110"></span
                 ><span class="text-slate-500"></span>
               </a>
               <div class="block lg:hidden">
@@ -186,8 +186,6 @@ const menuitems = [
           </Astronav>
          
         </div>
-
-        <img src="images/samedayappliance-repair-services.webp" width="150" height="150">
         <!--Red Buttons in the black header on Desktop -->
         <div>
           <div class="hidden lg:flex items-center gap-4">
