--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -206,7 +206,13 @@ const menuitems = [
               src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
             ></script>
             <!--End of Housecallpro Online booking button-->
+            <div><img style="border-radius:30px;" src="images/licensed-label-red-band-sign-vector-27170489.jpg" width="130" height="90"></div>
+            <div><img style="border-radius:30px;" src="images/insured.jpeg" width="110" height="90"></div>
+            <div><img style="border-radius:10px;" src="images/epa.jpeg" width="180" height="90"></div>
+            <div><img style="border-radius:10px;" src="images/osha.jpeg" width="90" height="90"></div>
+            <div><img style="border-radius:10px;" src="images/10.jpeg" width="80" height="90"></div>
           </div>
+          
         </div>
          <!--End Red Buttons in the black header on Desktop -->
         <div class="reviews reviews-header" >
