--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -207,7 +207,7 @@ const menuitems = [
             ></script>
             <!--End of Housecallpro Online booking button-->
             <div><img style="border-radius:30px;" src="images/same-day-appliance-repair-licensed.webp" width="130" height="90"></div>
-            <div><img style="border-radius:30px;" src="images/insured.jpeg" width="110" height="90"></div>
+            <div><img style="border-radius:30px;" src="images/same-day-appliance-repair-insured.webp" width="112" height="90"></div>
             <div><img style="border-radius:10px;" src="images/epa.jpeg" width="180" height="90"></div>
             <div><img style="border-radius:10px;" src="images/osha.jpeg" width="90" height="90"></div>
             <div><img style="border-radius:10px;" src="images/10.jpeg" width="80" height="90"></div>
