--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -209,9 +209,9 @@ const menuitems = [
             <div><img src="images/same-day-appliance-repair-licensed.webp" width="130" height="90"></div>
             <div><img src="images/same-day-appliance-repair-insured.webp" width="112" height="90"></div>
             <div><img src="images/same-day-appliance-repair-epa-certified.webp" width="165" height="90"></div>
-            <div><img style="border-radius:10px;" src="images/osha.jpeg" width="90" height="90"></div>
-            <div><img style="border-radius:10px;" src="images/10.jpeg" width="80" height="90"></div>
-            <div><img style="border-radius:10px;" src="images/img-background-check_698.jpg" width="100" height="90"></div>
+            <div><img src="images/same-day-appliance-repair-osha-trained.webp" width="98" height="90"></div>
+            <div><img style="border-radius:45px;" src="images/same-day-applaince-repair-nate-certified.webp" width="90" height="90"></div>
+            <div><img style="border-radius:10px;" src="images/same-day-appliance-repair-background-checked.webp" width="100" height="90"></div>
           </div>
           
         </div>
