--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -206,7 +206,12 @@ const menuitems = [
               src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
             ></script>
             <!--End of Housecallpro Online booking button-->
-       
+            <div><img src="images/same-day-appliance-repair-licensed.webp" width="130" height="90"></div>
+            <div><img src="images/same-day-appliance-repair-insured.webp" width="112" height="90"></div>
+            <div><img src="images/same-day-appliance-repair-epa-certified.webp" width="165" height="90"></div>
+            <div><img src="images/same-day-appliance-repair-osha-trained.webp" width="98" height="90"></div>
+            <div><img style="border-radius:45px;" src="images/same-day-applaince-repair-nate-certified.webp" width="90" height="90"></div>
+            <div><img style="border-radius:10px;" src="images/same-day-appliance-repair-background-checked.webp" width="100" height="90"></div>
           </div>
           
         </div>
