--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -8,14 +8,16 @@ import Layout from "@layouts/Layout.astro";
 import "components/css-components/style-header.css";
 
 const menuitems = [
-
   {
     title: "Household Appliance Services",
     path: "/services/commercial-and-household",
     children: [
       { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
       { title: "Freezer Repair", path: "/services/freezer-repair" },
-      {title: "Washing Machine Repair", path: "/services/washing-machine-repair"},
+      {
+        title: "Washing Machine Repair",
+        path: "/services/washing-machine-repair",
+      },
       { title: "Dryer Repair", path: "/services/dryer-repair" },
       { title: "Stove/Range Repair", path: "/services/stove-repair" },
       { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
@@ -25,9 +27,9 @@ const menuitems = [
       { title: "Range Hood Repair", path: "/services/range-hood-repair" },
       { title: "Fireplace Repair", path: "/services/fireplace-repair" },
       { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair" },
-      ],
+    ],
   },
-      {
+  {
     title: "Commercial Appliance Services",
     path: "/services/commercial-and-household",
     children: [
@@ -66,10 +68,8 @@ const menuitems = [
         title: "Commercial Dishwasher Repair",
         path: "/services/commercial-dishwasher-repair",
       },
-  
     ],
   },
-
 
   {
     title: "Service Areas",
@@ -106,10 +106,8 @@ const menuitems = [
       },
     ],
   },
-  
 ];
 ---
-
 
 <Layout>
   <Container>
@@ -121,9 +119,14 @@ const menuitems = [
             <div class="flex w-full lg:w-auto items-center justify-between">
               <a href="/" class="text-lg"
                 ><span
-                  class="font-bold text-slate-800"
+                  class="font-bold text-slate-800 logo-header"
                   style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                  ><img src="images/same-day-appalince-repair-logo.webp" title="Same Day Appliance Repair Services" width="250" height="110"></span
+                  ><img
+                    src="images/same-day-appalince-repair-logo.webp"
+                    title="Same Day Appliance Repair Services"
+                    width="244"
+                    height="106"
+                  /></span
                 ><span class="text-slate-500"></span>
               </a>
               <div class="block lg:hidden">
@@ -164,7 +167,7 @@ const menuitems = [
               <!--Red Buttons In the black header on Mobile-->
               <div class="lg:hidden flex items-center mt-3 gap-4">
                 <Link href="tel:+14243250520" style="muted" block size="md"
-                  >CALL US1: (424) 325-0520</Link
+                  >CALL US: (424) 325-0520</Link
                 >
 
                 <!--Start of Housecallpro Online booking button-->
@@ -173,7 +176,7 @@ const menuitems = [
                   data-orgname="Same-Day-Appliance-Repair"
                   class="hcp-button"
                   onClick="HCPWidget.openModal()">
-                  Book1
+                  Book!
                 </button>
                 <script
                   async
@@ -184,47 +187,86 @@ const menuitems = [
               <!--End Red Buttons In the black header on Mobile-->
             </MenuItems>
           </Astronav>
-         
         </div>
         <!--Red Buttons in the black header on Desktop -->
         <div>
           <div class="hidden lg:flex items-center gap-4">
-            <div class="call-header">
-              <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
+            <div class="header-bootun">
+              <div class="call-header">
+                <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
+              </div>
+
+              <!--Start of Housecallpro Online booking button-->
+              <button
+                data-token="9e68ce292ba246dbba0fe928b98791f7"
+                data-orgname="Same-Day-Appliance-Repair"
+                class="hcp-button"
+                onClick="HCPWidget.openModal()">
+                BOOK NOW!
+              </button>
+              <script
+                async
+                src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
+              ></script>
             </div>
-            
-            <!--Start of Housecallpro Online booking button-->
-            <button
-              data-token="9e68ce292ba246dbba0fe928b98791f7"
-              data-orgname="Same-Day-Appliance-Repair"
-              class="hcp-button"
-              onClick="HCPWidget.openModal()">
-              Book
-            </button>
-            <script
-              async
-              src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
-            ></script>
-            <!--End of Housecallpro Online booking button-->
-            <div><img src="images/same-day-appliance-repair-licensed.webp" width="130" height="90"></div>
-            <div><img src="images/same-day-appliance-repair-insured.webp" width="112" height="90"></div>
-            <div><img src="images/same-day-appliance-repair-epa-certified.webp" width="165" height="90"></div>
-            <div><img src="images/same-day-appliance-repair-osha-trained.webp" width="98" height="90"></div>
-            <div><img style="border-radius:45px;" src="images/same-day-applaince-repair-nate-certified.webp" width="90" height="90"></div>
-            <div><img style="border-radius:10px;" src="images/same-day-appliance-repair-background-checked.webp" width="100" height="90"></div>
+
+            <div class="header-licenses-foto">
+              <!--End of Housecallpro Online booking button-->
+              <div>
+                <img
+                  src="images/same-day-appliance-repair-licensed.webp"
+                  width="130"
+                  height="90"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/same-day-appliance-repair-insured.webp"
+                  width="112"
+                  height="90"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/same-day-appliance-repair-epa-certified.webp"
+                  width="165"
+                  height="90"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/same-day-appliance-repair-osha-trained.webp"
+                  width="98"
+                  height="90"
+                />
+              </div>
+              <div>
+                <img
+                  style="border-radius:45px;"
+                  src="images/same-day-applaince-repair-nate-certified.webp"
+                  width="90"
+                  height="90"
+                />
+              </div>
+              <div>
+                <img
+                  style="border-radius:10px;"
+                  src="images/same-day-appliance-repair-background-checked.webp"
+                  width="100"
+                  height="90"
+                />
+              </div>
+            </div>
           </div>
-          
         </div>
-         <!--End Red Buttons in the black header on Desktop -->
-        <div class="reviews reviews-header" >
+        <!--End Red Buttons in the black header on Desktop -->
+        <div class="reviews reviews-header">
           <p>
             <a href="#reviews"
               ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
-              (Google Rating)<a
-                ><a href="#reviews">(Thumbtack Rating)</a>
-              </a>
+              (Google Rating)<a><a href="#reviews">(Thumbtack Rating)</a> </a>
+            </a>
           </p>
-           
         </div>
       </div>
     </header>
