--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -213,8 +213,9 @@ const menuitems = [
             <div class="header-licenses-foto">
               <!--End of Housecallpro Online booking button-->
               <div>
+                <!-- src="images/same-day-appliance-repair-licensed.webp" -->
                 <img
-                  src="images/same-day-appliance-repair-licensed.webp"
+                  src="/public/images/same-day-appliance-repair-licensed.webp"
                   width="130"
                   height="90"
                 />
