--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -215,7 +215,7 @@ const menuitems = [
               <div>
                 <!-- src="images/same-day-appliance-repair-licensed.webp" -->
                 <img
-                  src="public/images/same-day-appliance-repair-licensed.webp"
+                  src="../images/same-day-appliance-repair-licensed.webp"
                   width="130"
                   height="90"
                 />
