--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -238,7 +238,7 @@ button.hcp-button:hover {
 }
 
 .header-licenses-foto {
-    display: flex;
+    display: none;
 }
 
 .header-licenses-foto img {
